tests/expectations/compiler/statements/all_loops_fail.out
namespace = "Compile"
expectation = "Fail"
outputs = ["""
Error [EPAR0370009]: unexpected string: expected 'expression', found '='
    --> compiler-test:16:30
     |
  16 |         for a: u32 in 10u32..=0u32 {
     |                              ^"""]
